--- a/App5.css
+++ b/App5.css
@@ -1,8 +1,5 @@
-*{
-	font-family:"Segoe UI","Ubuntu","Arial","sans-serif";
-}
 body{
-	margin:3px;
+	font-family:"Segoe UI","Ubuntu","Arial","sans-serif";
 }
 app5-notification{
 	visibility:hidden;
@@ -93,6 +90,7 @@ app5-tab-strip{
 app5-tab-meta{
 	display:block;
 	position:relative;
+	background-color:white;
 	border:1px solid lightgrey;
 }
 app5-tab-meta > app5-panel{
@@ -105,6 +103,7 @@ app5-tab-meta > app5-panel{
 app5-menubar{
 	display:block;
 	padding:3px;
+	background-color:white;
 	border:1px solid lightgrey;
 	cursor:default;
 }
@@ -243,37 +242,44 @@ app5-dialog{
 	background:#EEE;
 	border:1px solid lightgrey;
 }
-app5-dialog > hr{
-	height:1px;
-	margin:0;
-	border:none;
-	background-color:grey;
+app5-dialog{
+	visibility:hidden;
 }
-app5-modal > app5-dialog{
+app5-modal > app5-dialog[data-showing="true"]{
 	visibility:inherit;
 }
 
-.dialog_title{
-	margin:3px;
+.dialog-title{
+	padding:3px;
 	display:block;
 	text-align:left;
+	border-bottom:1px solid lightgrey;
 }
-.dialog_closer{
+.dialog-closer{
 	display:inline-block;
 	float:right;
 	color:#AAA;
+	font-weight:normal;
 }
-a.dialog_closer{
+a.dialog-closer{
 	text-decoration:none;
 }
-.dialog_content{
+.dialog-content{
 	padding:3px;
 }
 app5-effect{
 	display:inline-block;
 }
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar{
 	border-radius:3px;
 	-webkit-border-radius:3px;
 	width:5px;
+}
+::-webkit-scrollbar-track{
+	background-color:transparent;	
+}
+::-webkit-scrollbar-thumb{
+	background-color:rgba(192,192,192,.8);
+	border-radius:4px;
+	-webkit-border-radius:4px;
 }
